Perfect CSS for the controls 🎉

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="image-area">
 
 </div>
-<div id="controls">
+<div id="controls" class="show">
 	<h1>The Internet Slideshow</h1>
 	<p>Paste a link below (<a (click)="openInfo()">See supported links</a>)</p>
 
