--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+	color: #ffffff;
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	background-color: #000000;
+}
+
+* {
+	box-sizing: border-box;
+}
+
+a {
+	color: #337ab7;
+
+	&:hover {
+		color: #57a3e6;
+		text-decoration: underline;
+		cursor: pointer;
+	}
+}
