--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,24 @@
+#image-area {
+	display: flex;
+
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+
+	&.single {
+		flex-wrap: nowrap;
+		align-items: stretch;
+	}
+
+	&.grid {
+		flex-wrap: wrap;
+		align-content: flex-start;
+		justify-content: space-evenly;
+	}
+}
+
 #controls {
 	padding: 20px;
 
