--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,33 +1,52 @@
 #image-area {
-	display: flex;
-
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	left: 0px;
 	right: 0px;
 	bottom: 0px;
 
 	&.single {
-		flex-wrap: nowrap;
-		align-items: stretch;
+		overflow: hidden;
+
+		white-space: nowrap;
+
+		&.mobile {
+			overflow-x: auto;
+			scroll-snap-type: mandatory;
+			scroll-snap-points-x: repeat(100%);
+		}
+
+		app-image {
+			width: 100%;
+			height: 100%;
+		}
 	}
 
 	&.grid {
+		display: flex;
 		flex-wrap: wrap;
-		align-content: flex-start;
-		justify-content: space-evenly;
+		justify-content: space-around;
+		
+		overflow-x: hidden;
+		overflow-y: auto;
+
+		app-image {
+			width: 175px;
+			height: 175px;
+
+			margin: 10px 0px;
+		}
 	}
 }
 
 #controls {
 	padding: 20px;
-
-	border-top-right-radius: 25px;
+	
 	background-color: rgba(0, 0, 0, 0.5);
 	backdrop-filter: blur(2px);
 	opacity: 0;
 
-	position: absolute;
+	position: fixed;
 	left: 0px;
 	right: 0px;
 	bottom: 0px;
@@ -84,12 +103,11 @@
 		width: 100vw;
 		max-width: 400px;
 		padding: 20px;
-	
-		border-radius: 20px;
+
 		background-color: rgba(0, 0, 0, 0.5);
 		backdrop-filter: blur(2px);
 		
-		position: absolute;
+		position: fixed;
 		top: 50vh;
 		left: 50vw;
 		transform: translate(-50%, -50%);
