--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,7 @@
 
 		white-space: nowrap;
 
-		&.mobile {
+		&.touch {
 			overflow-x: auto;
 			scroll-snap-type: mandatory;
 			scroll-snap-points-x: repeat(100%);
