--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<div id="image-area" class="single" [class.mobile]="isMobile">
+<div #imageArea
+	 id="image-area"
+     class="single"
+	 [class.touch]="isTouch">
 	<app-image *ngFor="let image of images"
 	           [imageURL]="image.imageURL"
 	           [title]="image.title"
@@ -14,7 +17,7 @@
 
 	<div class="input-group">
 		<input type="url" [(ngModel)]="URL"/>
-		<button (click)="loadURL(URL)">Start Slideshow</button>
+		<button (click)="loadURL(URL)" style="min-width: 15ch;">Start Slideshow</button>
 	</div>
 
 	<label>
@@ -25,10 +28,10 @@
 	</label>
 
 	<div class="input-group">
-		<div>Page</div>
-		<input value="0" type="number"/>
-		<div>of 0</div>
-		<button>Go</button>
+		<div style="min-width: 4ch;">Page</div>
+		<input [(ngModel)]="pageIndicator" type="number" (keyup.enter)="imageAreaScroll = pageNumber"/>
+		<div style="min-width: 6ch;">of {{images.length}}</div>
+		<button (click)="imageAreaScroll = pageNumber" style="min-width: 2ch;">Go</button>
 	</div>
 </div>
 
@@ -36,5 +39,18 @@
 	<div class="back" (click)="showInfo = false"></div>
 	<div class="modal">
 		<h1>Supported Links</h1>
+		<ul>
+			<li *ngFor="let generator of imageService.generators">
+				{{generator.site}}
+				<table>
+					<tr *ngFor="let example of generator.examples; let i = index;">
+						<td>
+							<span *ngIf="i === 0">Example:</span>
+						</td>
+						<td><code>{{example}}</code></td>
+					</tr>
+				</table>
+			</li>
+		</ul>
 	</div>
 </div>
