--- a/src/app/image/image.component.scss
+++ b/src/app/image/image.component.scss
@@ -4,20 +4,32 @@
 
 	overflow: hidden;
 
-	h1 {
-		position: absolute;
-		top: 0px;
-		left: 0px;
-	}
-	p {
-		text-align: center;
+	h1, p {
+		margin: 0px;
+		padding: 15px;
+
+		background-color: rgba(0, 0, 0, 0.5);
+		backdrop-filter: blur(2px);
+		white-space: normal;
 
 		position: absolute;
 		left: 0px;
 		right: 0px;
+	}
+	h1 {
+		top: 0px;
+
+		a {
+			color: #ffffff;
+			text-decoration: none;
+		}
+	}
+	p {
+		text-align: center;
+
 		bottom: 0px;
 	}
-	
+
 	.image {
 		max-width: 100%;
 		max-height: 100%;
