--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,15 @@
      class="single"
 	 [class.touch]="isTouch"
      (scroll)="scroll($event)">
-	<app-image *ngFor="let image of images"
+	<app-image *ngFor="let image of images; let i = index;"
 	           [imageURL]="image.imageURL"
 	           [title]="image.title"
 	           [description]="image.description"
 	           [sourceURL]="image.sourceURL"
-	           [showText]="showText">
+			   [showText]="showText"
+			   [near]="isNear(i)"
+			   [active]="i === imageAreaScroll"
+			   (error)="removeFailure($event.sender)">
 	</app-image>
 </div>
 
@@ -28,10 +31,17 @@
 
 	<div class="input-group">
 		<div style="min-width: 4ch;">Page</div>
-		<input [(ngModel)]="pageNumber" type="number" (keyup.enter)="imageAreaScroll = pageNumber"/>
-		<div style="min-width: 6ch;">of {{images.length}}</div>
+		<input [(ngModel)]="pageNumber" type="number" (keyup.enter)="imageAreaScroll = pageNumber - 1;"/>
+		<div style="min-width: 6ch;">of {{images ? images.length : 0}}</div>
 		<button (click)="imageAreaScroll = pageNumber" style="min-width: 2ch;">Go</button>
 	</div>
+</div>
+
+<div
+	id="controls-toggle"
+	[class.show]="!showControls && isTouch"
+	(click)="showControls = true;">
+	<p>Show Controls</p>
 </div>
 
 <div id="info" [hidden]="!showInfo">
