--- a/src/app/image/image.component.scss
+++ b/src/app/image/image.component.scss
@@ -30,14 +30,40 @@
 		bottom: 0px;
 	}
 
-	.image {
-		max-width: 100%;
-		max-height: 100%;
+	.image-holder {
+		width: 100vw;
+		height: 100vh;
 
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
+		overflow: auto;
+
+		line-height: 100vh;
+		text-align: center;
+
+		.image {
+			max-width: 100%;
+			max-height: 100%;
+	
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+
+			cursor: zoom-in;
+
+			&.zoom {
+				max-width: none;
+				max-height: none;
+
+				position: relative;
+				top: 0px;
+				left: 0px;
+				transform: unset;
+
+				vertical-align: middle;
+
+				cursor: zoom-out;
+			}
+		}
 	}
 }
 
