Links to the extension

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,8 @@
 		<div style="min-width: 6ch;">of {{images ? images.length : 0}}</div>
 		<button (click)="imageAreaScroll = pageNumber" style="min-width: 2ch;">Go</button>
 	</div>
+
+	<p><a (click)="openExtensionPage()">Download the Slideshow extension!</a></p>
 </div>
 
 <div
