--- a/src/app/image/image.component.scss
+++ b/src/app/image/image.component.scss
@@ -51,7 +51,7 @@
 			cursor: zoom-in;
 
 			&.zoom {
-				max-width: none;
+				max-width: 100vw;
 				max-height: none;
 
 				position: relative;
@@ -61,7 +61,11 @@
 
 				vertical-align: middle;
 
-				cursor: zoom-out;
+				&.zoom-full {
+					max-width: none;
+					
+					cursor: zoom-out;
+				}
 			}
 		}
 	}
