--- a/src/app/image/image.component.scss
+++ b/src/app/image/image.component.scss
@@ -63,9 +63,11 @@
 
 				&.zoom-full {
 					max-width: none;
-					
-					cursor: zoom-out;
 				}
+			}
+
+			&.zoom-out {
+				cursor: zoom-out;
 			}
 		}
 	}
